# avakas

./: .dir-locals.el  .gitignore  .pylintrc  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  avakas  avakas.py  ci  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  release.yml  test.yml
avakas/: __init__.py  __main__.py  avakas.py  cli.py  errors.py  utils.py
avakas/flavors/: __init__.py  ansible.py  base.py  chef.py  erlang.py  git.py  node.py
scripts/: ci  container  docker-entrypoint  integration  upload  versiongen
templates/: setup.py
tests/integration/: ansible.bats  autobump.bats  build.bats  chef.bats  fake-file  gates.bats  gitnative.bats  help.bats  helper.bash  plain.bats  prerelease.bats  show.bats  ux.bats
tests/integration/fixtures/: metadata.rb
