[tool.poetry]
name = "avakas"
version = "1.0.19-pre.3"
description = "Interact with project version metadata"
authors = ["Jonathan Freedman <jonafree@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
GitPython = "^3.1.27"
packaging = "^21.3"
semantic-version = "^2.9.0"
parsimonious = "^0.9.0"

[tool.poetry.dev-dependencies]
gitdb = "^4.0.9"
GitPython = "^3.1.27"
loremipsum = "^1.0.5"
nose = "^1.3.7"
parsimonious = "^0.9.0"
pylint = "^2.13.9"
coverage = "^6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
